# first_app

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/kw/cpp_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: UltraFace.cpp  Ultra_jni.cpp  net.cpp
app/src/main/include/: net.h
app/src/main/java/com/kw/cpp_test/: FaceSDKNative.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kw/cpp_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
